2009-04-23  Till Kamppeter <till.kamppeter@gmail.com>

	* README, USAGE, configure.ac: Set version number to 4.1.0, to be
	  always newer than the stable branch.

2009-03-17  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-compiledb.in: Fixed copy-and-paste bug in foomatic-compiledb
	  which broke the "-d" option (bug #319).

2009-02-25  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Added "application/vnd.apple-pdf" as input
	  mime type to the generated Foomatic PPDs, so that also under Mac
	  OS X a full PDF printing workflow will get established (bug
	  #313).

2009-01-15  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: For string and password options the
	  "*ParamCustom..." keywords were not generated correctly (option
	  type missing, bug #297).
	  Changed the way how the driver's short description is added to the
	  PPD so that it can be longer than 80 characters (bug #296).

2009-01-09  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.0.

2009-01-08  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-ppdfile.in: "foomatic-ppdfile list" showed wrong PPD
	  file names for some printers (bug #281).

2009-01-07  Till Kamppeter <till.kamppeter@gmail.com>

	* configure.ac: Bumped version number to 4.0.0.

	* foomatic-combo-xml.c: All printers with <postscript> in their
	  <lang> sections got listed as supported by the "Postscript"
	  driver. Now explicit assignment of this driver via the
	  <printers> section in the driver entry or the <drivers> section
	  in the printer entry is required.
	  Let the overview for listing only printer/driver combos with
	  valid PPDs (foomatic-combo-xml -C") also show combos where the
	  driver is only mentioned in the printer's driver list. Now
	  foomatic-compiledb really generates all PPDs which are available
	  on the OpenPrinting web site (bug #291).

	* README, USAGE, TODO: Updated for version 4.0.0.
